Fixed issue where images larger than 150x150 would stretch outside of their bounds on the show page.

--- a/app/assets/stylesheets/ads.scss
+++ b/app/assets/stylesheets/ads.scss
@@ -55,6 +55,13 @@
 
 .ad-image {
   float: left;
+  width: 150px;
+  height: 150px;
+}
+
+.ad-image img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .ad-item-content {
